// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`repeat-node-compiler on compile custom as and index 1`] = `
"(() => {
  let rows = (() => {
    try {
      return st.items;
    } catch (err) {
      return;
    }
  })() || [];
  let _nodes = new Array(rows.length);
  let _createChildren = z => {
    (() => {
      let _updaters = [];
      let node = TAG_NODE_COMPILER_PART('parent', '[object Object]', 'true');
      _nodes[z] = {
        node: node,
        updaters: _updaters
      };
    })();
  };
  REPEAT_NODE_UPDATE_COMPILER_PART('parent', '[object Object]', 'false', '[object Object]');
  for (let __createIndex = 0; __createIndex < rows.length; __createIndex++) {
    _createChildren(__createIndex);
  }
})();"
`;

exports[`repeat-node-compiler on compile simple token 1`] = `
"(() => {
  let items = (() => {
    try {
      return st.items;
    } catch (err) {
      return;
    }
  })() || [];
  let _nodes = new Array(items.length);
  let _createChildren = i => {
    (() => {
      let _updaters = [];
      let node = TAG_NODE_COMPILER_PART('parent', '[object Object]', 'true');
      _nodes[i] = {
        node: node,
        updaters: _updaters
      };
    })();
  };
  REPEAT_NODE_UPDATE_COMPILER_PART('parent', '[object Object]', 'false', '[object Object]');
  for (let __createIndex = 0; __createIndex < items.length; __createIndex++) {
    _createChildren(__createIndex);
  }
})();"
`;
